Changes after 2.2.6 release:

- Fixed bug in FSTENV instruction (Stanislav Shwartsman)
- Recognize #XF exception (19) when SSE is enabled
- Fixed bug in SYSRET instruction legacy mode
- Fixes in Bochs debugger and disassembler
- Save and restore RIP/RSP only for FAULT-type exceptions, not for traps
- Moved configure time --enable-reset-on-triple-fault option to runtime, 
  the 'cpu' option in .bochsrc is extended and the old configure option
  is deprecated (Stanislav Shwartsman)
- Support for Dual Core and Intel(R) HyperThreading Technology. Now you
  could choose amount of cores per processor and amount of HT threads per
  core from .bochsrc for SMP simulation (Stanislav Shwartsman)

-------------------------------------------------------------------------
Changes in 2.2.6 (January 29, 2006):

- First major SMP release ! 
  - several APIC and I/O APIC fixes make SMP Bochs booting Windows NT4.0 
    or Knoppix 4.0.2 without noapic kernel option in SMP configuration.
  - critical APIC timer bug fixed 
  - obsolete SMP BIOS images removed (MP tables created dynamicaly) 
  - determine number of processors in SMP configuration through .bochsrc 
    new .bochsrc option 'CPU' allows to choose number of processors to emulate
  - new configure option --enable-smp to configure Bochs for SMP support, 
    the old --enable-processors=N option is deprecated 
- CPU and internal debugger fixes 
  - enabled #PCE bit in CR4 register, previosly setting of this bit 
    generated #GP(0) fault 
  - enabled LAHF/SAHF instructions in x86-64 mode 
  - fixed bug in PMULUDQ SSE2 instruction 
  - fixes in Bochs debugger 
- Configure and compile 
  - enable VME (virtual 8086 mode extensions) by default if cpu-level >= 5 
  - enable Bochs disassembler by default for all configurations 
  - win32 installer script improvements 
  - ips parameter moved to new 'CPU' option 
  - show IPS value in status bar if BX_SHOW_IPS is enabled 
- Other 